moved RT counter to left on small screens. fixes #52.

--- a/postcode/static/css/responsive.css
+++ b/postcode/static/css/responsive.css
@@ -1,3 +1,8 @@
 @media(max-width: 40em) { 
-  p {font-size: .7em;}
+  p {
+    font-size: .7em;
+  }
+  .rt_counter .text-right {
+    text-align: left;
+  }
 } /* max-width 640px, mobile-only styles */
